--- a/explore.ipynb
+++ b/explore.ipynb
@@ -3845,7 +3845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3853,12 +3853,143 @@
      "output_type": "stream",
      "text": [
       "fiberassign --mtl strategy_B/targets/gray_subset_dr8_mtl_dark_gray_northern_cap.fits --sky targets/subset_dr8_sky.fits  --footprint footprint/subset_gray_dark0_dark1_dark2_dark3.fits --outdir strategy_B/fiberassign_gray/ --overwrite\n",
+      "fba_run_qa --dir strategy_B/fiberassign_gray/ --footprint footprint/subset_gray.fits\n",
       "INFO: Reading fiber positions from /global/common/software/desi/cori/desiconda/20180709-1.2.6-spec/code/desimodel/master/data/focalplane/fiberpos-all.fits\n",
-      "INFO: Target file strategy_B/targets/gray_subset_dr8_mtl_dark_gray_northern_cap.fits has 8353255 rows.  Reading in chunks of 1000000\n",
-      "INFO: Read target file strategy_B/targets/gray_subset_dr8_mtl_dark_gray_northern_cap.fits:  11.17 seconds (1 calls)\n",
-      "INFO: Target file targets/subset_dr8_sky.fits has 9094451 rows.  Reading in chunks of 1000000\n",
-      "INFO: Read target file targets/subset_dr8_sky.fits:  14.30 seconds (1 calls)\n",
-      "INFO: Building target tree:  6.11 seconds (1 calls)\n"
+      "INFO: Found 125 fiberassign tile files\n",
+      "INFO: Selecting 125 fiberassign tile files\n",
+      "INFO: Processing tile 28367\n",
+      "INFO: Processing tile 28523\n",
+      "INFO: Processing tile 28516\n",
+      "INFO: Processing tile 28460\n",
+      "INFO: Processing tile 28445\n",
+      "INFO: Processing tile 25852\n",
+      "INFO: Processing tile 25839\n",
+      "INFO: Processing tile 25842\n",
+      "INFO: Processing tile 28462\n",
+      "INFO: Processing tile 28485\n",
+      "INFO: Processing tile 25825\n",
+      "INFO: Processing tile 28346\n",
+      "INFO: Processing tile 25841\n",
+      "INFO: Processing tile 28496\n",
+      "INFO: Processing tile 25848\n",
+      "INFO: Processing tile 28497\n",
+      "INFO: Processing tile 25810\n",
+      "INFO: Processing tile 28507\n",
+      "INFO: Processing tile 28339\n",
+      "INFO: Processing tile 25826\n",
+      "INFO: Processing tile 25837\n",
+      "INFO: Processing tile 28461\n",
+      "INFO: Processing tile 25846\n",
+      "INFO: Processing tile 28482\n",
+      "INFO: Processing tile 28456\n",
+      "INFO: Processing tile 28495\n",
+      "INFO: Processing tile 25792\n",
+      "INFO: Processing tile 28508\n",
+      "INFO: Processing tile 28363\n",
+      "INFO: Processing tile 28466\n",
+      "INFO: Processing tile 25824\n",
+      "INFO: Processing tile 28489\n",
+      "INFO: Processing tile 28383\n",
+      "INFO: Processing tile 28475\n",
+      "INFO: Processing tile 28518\n",
+      "INFO: Processing tile 28467\n",
+      "INFO: Processing tile 25789\n",
+      "INFO: Processing tile 28506\n",
+      "INFO: Processing tile 28494\n",
+      "INFO: Processing tile 28491\n",
+      "INFO: Processing tile 28453\n",
+      "INFO: Processing tile 28441\n",
+      "INFO: Processing tile 28498\n",
+      "INFO: Processing tile 28365\n",
+      "INFO: Processing tile 25812\n",
+      "INFO: Processing tile 28362\n",
+      "INFO: Processing tile 28464\n",
+      "INFO: Processing tile 28364\n",
+      "INFO: Processing tile 28477\n",
+      "INFO: Processing tile 28463\n",
+      "INFO: Processing tile 28447\n",
+      "INFO: Processing tile 28483\n",
+      "INFO: Processing tile 28493\n",
+      "INFO: Processing tile 25788\n",
+      "INFO: Processing tile 25862\n",
+      "INFO: Processing tile 28473\n",
+      "INFO: Processing tile 25808\n",
+      "INFO: Processing tile 25838\n",
+      "INFO: Processing tile 28509\n",
+      "INFO: Processing tile 28521\n",
+      "INFO: Processing tile 28517\n",
+      "INFO: Processing tile 28515\n",
+      "INFO: Processing tile 25823\n",
+      "INFO: Processing tile 25807\n",
+      "INFO: Processing tile 28484\n",
+      "INFO: Processing tile 28448\n",
+      "INFO: Processing tile 25791\n",
+      "INFO: Processing tile 28459\n",
+      "INFO: Processing tile 28435\n",
+      "INFO: Processing tile 28479\n",
+      "INFO: Processing tile 28443\n",
+      "INFO: Processing tile 25827\n",
+      "INFO: Processing tile 28385\n",
+      "INFO: Processing tile 28478\n",
+      "INFO: Processing tile 28455\n",
+      "INFO: Processing tile 28505\n",
+      "INFO: Processing tile 28366\n",
+      "INFO: Processing tile 28342\n",
+      "INFO: Processing tile 28344\n",
+      "INFO: Processing tile 25849\n",
+      "INFO: Processing tile 25860\n",
+      "INFO: Processing tile 28384\n",
+      "INFO: Processing tile 28510\n",
+      "INFO: Processing tile 28481\n",
+      "INFO: Processing tile 28474\n",
+      "INFO: Processing tile 28468\n",
+      "INFO: Processing tile 28341\n",
+      "INFO: Processing tile 25828\n",
+      "INFO: Processing tile 25858\n",
+      "INFO: Processing tile 25787\n",
+      "INFO: Processing tile 28458\n",
+      "INFO: Processing tile 25857\n",
+      "INFO: Processing tile 25809\n",
+      "INFO: Processing tile 25864\n",
+      "INFO: Processing tile 25859\n",
+      "INFO: Processing tile 28480\n",
+      "INFO: Processing tile 28504\n",
+      "INFO: Processing tile 28492\n",
+      "INFO: Processing tile 25850\n",
+      "INFO: Processing tile 28446\n",
+      "INFO: Processing tile 28514\n",
+      "INFO: Processing tile 28476\n",
+      "INFO: Processing tile 28499\n",
+      "INFO: Processing tile 25790\n",
+      "INFO: Processing tile 28465\n",
+      "INFO: Processing tile 25863\n",
+      "INFO: Processing tile 28503\n",
+      "INFO: Processing tile 28457\n",
+      "INFO: Processing tile 25855\n",
+      "INFO: Processing tile 28490\n",
+      "INFO: Processing tile 28525\n",
+      "INFO: Processing tile 28444\n",
+      "INFO: Processing tile 25856\n",
+      "INFO: Processing tile 25840\n",
+      "INFO: Processing tile 28513\n",
+      "INFO: Processing tile 28438\n",
+      "INFO: Processing tile 25845\n",
+      "INFO: Processing tile 28454\n",
+      "INFO: Processing tile 28522\n",
+      "INFO: Processing tile 28382\n",
+      "INFO: Processing tile 28345\n",
+      "INFO: Processing tile 28442\n",
+      "INFO: Processing tile 25811\n",
+      "INFO: Processing tile 25851\n",
+      "INFO: Processing tile 28347\n",
+      "INFO:quickcat.py:585:quickcat: Wed Aug  7 15:05:15 2019 QC Reading 125 tiles\n",
+      "INFO:quickcat.py:629:quickcat: Wed Aug  7 15:05:20 2019 QC Trimming truth to just observed targets\n",
+      "INFO:quickcat.py:636:quickcat: Wed Aug  7 15:05:23 2019 QC Constructing new redshift catalog\n",
+      "INFO:quickcat.py:648:quickcat: Wed Aug  7 15:05:23 2019 QC Adding ZERR and ZWARN\n",
+      "INFO:quickcat.py:666:quickcat: Wed Aug  7 15:05:23 2019 QC Adding NUMOBS column\n",
+      "INFO:quickcat.py:672:quickcat: Wed Aug  7 15:05:28 2019 QC Merging previous zcat\n",
+      "INFO:quickcat.py:712:quickcat: Wed Aug  7 15:05:28 2019 QC done\n",
+      "INFO:mtl.py:119:make_mtl: 472463 of 8353255 targets have priority zero, setting N_obs=0.\n"
      ]
     }
    ],
@@ -3868,7 +3999,7 @@
     "\n",
     "\n",
     "strategy = 'strategy_B'\n",
-    "for i_pass in range(1):\n",
+    "for i_pass in range(4):\n",
     "    \n",
     "    footprint_name = footprint_names[i_pass]\n",
     "    old_pass_name = pass_names[i_pass-1]\n",
@@ -3896,21 +4027,26 @@
     "    ! $cmd\n",
     "    \n",
     "    # Gather fiberassign files\n",
-    "    fba_files = glob.glob(os.path.join(fiberassign_dir,\"tile*.fits\"))\n",
-    "    \n",
+    "    tile_files = np.sort(glob.glob(os.path.join(fiberassign_dir,\"tile*.fits\")))\n",
+    "    fba_files = np.sort(glob.glob(os.path.join(fiberassign_dir,\"fiberassign*.fits\")))\n",
+    "\n",
     "    # remove tilefiles that are not in the list of tiles to build zcat\n",
     "    footprint = Table.read(zcat_footprint_filename)\n",
-    "    for fba_file in fba_files:\n",
-    "        fibassign, header = fits.getdata(fba_file, 'FIBERASSIGN', header=True)\n",
+    "    for tile_file, fba_file in zip(tile_files, fba_files):\n",
+    "        fibassign, header = fits.getdata(fba_file, header=True)\n",
     "        tileid = header['TILEID'] \n",
     "        if tileid not in footprint['TILEID']:\n",
     "            print(tileid, 'not in list', zcat_footprint_filename)\n",
+    "            print('removing {}'.format(fba_file))\n",
+    "            print('removing {}'.format(tile_file))\n",
+    "            os.remove(fba_file)\n",
+    "            os.remove(tile_file)\n",
     "            \n",
     "            \n",
     "    # Run qa\n",
     "    cmd = \"fba_run_qa --dir {} --footprint {}\".format(fiberassign_dir, zcat_footprint_filename)\n",
     "    print(cmd)\n",
-    "    #! $cmd\n",
+    "    ! $cmd\n",
     "    \n",
     "    # Gather fiberassign files\n",
     "    fba_files = glob.glob(os.path.join(fiberassign_dir,\"tile*.fits\"))\n",
@@ -3930,6 +4066,160 @@
     "    zcat.write(zcat_filename, overwrite=True)\n",
     "    mtl = desitarget.mtl.make_mtl(targets, zcat)\n",
     "    mtl.write(new_mtl_filename, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_files = glob.glob(os.path.join(fiberassign_dir,\"tile*.fits\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['strategy_B/fiberassign_gray/tile-025787.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025788.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025789.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025790.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025791.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025792.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025807.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025808.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025809.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025810.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025811.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025812.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025823.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025824.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025825.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025826.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025827.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025828.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025837.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025838.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025839.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025840.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025841.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025842.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025845.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025846.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025848.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025849.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025850.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025851.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025852.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025855.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025856.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025857.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025858.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025859.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025860.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025862.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025863.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-025864.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028339.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028341.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028342.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028344.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028345.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028346.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028347.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028362.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028363.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028364.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028365.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028366.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028367.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028382.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028383.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028384.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028385.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028435.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028438.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028441.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028442.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028443.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028444.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028445.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028446.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028447.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028448.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028453.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028454.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028455.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028456.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028457.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028458.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028459.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028460.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028461.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028462.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028463.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028464.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028465.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028466.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028467.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028468.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028473.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028474.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028475.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028476.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028477.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028478.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028479.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028480.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028481.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028482.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028483.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028484.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028485.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028489.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028490.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028491.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028492.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028493.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028494.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028495.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028496.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028497.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028498.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028499.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028503.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028504.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028505.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028506.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028507.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028508.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028509.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028510.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028513.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028514.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028515.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028516.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028517.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028518.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028521.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028522.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028523.fits',\n",
+       "       'strategy_B/fiberassign_gray/tile-028525.fits'],\n",
+       "      dtype='<U44')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(tile_files)"
    ]
   },
   {
