--- a/explore.ipynb
+++ b/explore.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,8 @@
     "    mtl_data = Table.read(mtl_file)\n",
     "    subset_ii = (mtl_data['RA']>145) & (mtl_data['RA']<205)\n",
     "    subset_ii &= (mtl_data['DEC']>-5) & (mtl_data['DEC']<25)\n",
-    "    mtl_data[subset_ii].write(initial_mtl_file, overwrite=True)"
+    "    mtl_data[subset_ii].write(initial_mtl_file, overwrite=True)\n",
+    "targets = Table.read(initial_mtl_file)"
    ]
   },
   {
@@ -110,7 +111,7 @@
     "    \n",
     "    print('writing truth')\n",
     "    truth.write(initial_truth_file, overwrite=True)\n",
-    "    print('done truth')"
+    "    print('done truth')\n"
    ]
   },
   {
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +178,7 @@
     "        favail.extend(id_favail['TARGETID'])\n",
     "    return list(set(favail))\n",
     "\n",
-    "def global_efficiency(targets, id_avail, zcat, target_class='QSO'):\n",
+    "def global_efficiency(targets, id_avail, zcat, target_class='QSO', truth_spectype='QSO'):\n",
     "    ii_avail = np.in1d(targets['TARGETID'], id_avail)\n",
     "    targets_avail = targets[ii_avail]\n",
     "\n",
@@ -191,7 +192,7 @@
     "    n_assigned = len(targets_zcat_class)\n",
     "\n",
     "    is_class_in_zcat = np.in1d(zcat['TARGETID'], targets_zcat_class['TARGETID'])\n",
-    "    zcat_class = zcat[is_class_in_zcat]\n",
+    "    zcat_class = zcat[is_class_in_zcat & (zcat['SPECTYPE']==truth_spectype)]\n",
     "\n",
     "    nobs = dict()\n",
     "    for i in range(10):\n",
@@ -15080,7 +15081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -15103,9 +15104,9 @@
       "600\n",
       "0 0 0.0\n",
       "QSO 0.9846025174883907 285761 281361 {0: 4400, 1: 204626, 2: 42243, 3: 24296, 4: 9357, 5: 799, 6: 40, 7: 0, 8: 0, 9: 0}\n",
-      "LRG 0.9359157620916744 473611 443260 {0: 30351, 1: 267029, 2: 127036, 3: 32792, 4: 14654, 5: 1627, 6: 119, 7: 3, 8: 0, 9: 0}\n",
-      "ELG 0.6437995757050582 2551527 1642672 {0: 908855, 1: 1589764, 2: 19517, 3: 23249, 4: 9309, 5: 794, 6: 39, 7: 0, 8: 0, 9: 0}\n",
-      "LRG_1PASS 0.9218001018395501 341714 314992 {0: 26722, 1: 248832, 2: 23523, 3: 26600, 4: 14291, 5: 1624, 6: 119, 7: 3, 8: 0, 9: 0}\n",
+      "LRG 0.9359157620916744 473611 443260 {0: 30351, 1: 267025, 2: 127023, 3: 32771, 4: 14649, 5: 1627, 6: 119, 7: 3, 8: 0, 9: 0}\n",
+      "ELG 0.6437995757050582 2551527 1642672 {0: 908855, 1: 1581176, 2: 70, 3: 39, 4: 12, 5: 0, 6: 0, 7: 0, 8: 0, 9: 0}\n",
+      "LRG_1PASS 0.9218001018395501 341714 314992 {0: 26722, 1: 248828, 2: 23510, 3: 26579, 4: 14286, 5: 1624, 6: 119, 7: 3, 8: 0, 9: 0}\n",
       "LRG_2PASS 0.9724861065831671 131897 128268 {0: 3629, 1: 18197, 2: 103513, 3: 6192, 4: 363, 5: 3, 6: 0, 7: 0, 8: 0, 9: 0}\n"
      ]
     }
@@ -15115,16 +15116,16 @@
     "favail_A = consolidate_favail(fba_files_A)\n",
     "zcat_A = Table.read('strategy_A/zcat/dark2_dark3_zcat.fits')\n",
     "tile_efficiency('strategy_A/fiberassign_full/qa.json')\n",
-    "global_efficiency(targets, favail_A, zcat_A, target_class='QSO')\n",
-    "global_efficiency(targets, favail_A, zcat_A, target_class='LRG')\n",
-    "global_efficiency(targets, favail_A, zcat_A, target_class='ELG')\n",
-    "global_efficiency(targets, favail_A, zcat_A, target_class='LRG_1PASS')\n",
-    "global_efficiency(targets, favail_A, zcat_A, target_class='LRG_2PASS')"
+    "global_efficiency(targets, favail_A, zcat_A, target_class='QSO', truth_spectype='QSO')\n",
+    "global_efficiency(targets, favail_A, zcat_A, target_class='LRG', truth_spectype='GALAXY')\n",
+    "global_efficiency(targets, favail_A, zcat_A, target_class='ELG', truth_spectype='GALAXY')\n",
+    "global_efficiency(targets, favail_A, zcat_A, target_class='LRG_1PASS', truth_spectype='GALAXY')\n",
+    "global_efficiency(targets, favail_A, zcat_A, target_class='LRG_2PASS', truth_spectype='GALAXY')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -15147,9 +15148,9 @@
       "600\n",
       "0 0 0.0\n",
       "QSO 0.9846025174883907 285761 281361 {0: 4400, 1: 204898, 2: 41524, 3: 24608, 4: 9456, 5: 819, 6: 56, 7: 0, 8: 0, 9: 0}\n",
-      "LRG 0.9358650875929825 473611 443236 {0: 30375, 1: 268009, 2: 128212, 3: 32062, 4: 13372, 5: 1492, 6: 87, 7: 2, 8: 0, 9: 0}\n",
-      "ELG 0.6524692860393012 2551527 1664793 {0: 886734, 1: 1611854, 2: 19106, 3: 23588, 4: 9371, 5: 818, 6: 56, 7: 0, 8: 0, 9: 0}\n",
-      "LRG_1PASS 0.9217357205148164 341714 314970 {0: 26744, 1: 249779, 2: 24600, 3: 25992, 4: 13019, 5: 1491, 6: 87, 7: 2, 8: 0, 9: 0}\n",
+      "LRG 0.9358650875929825 473611 443236 {0: 30375, 1: 268005, 2: 128200, 3: 32040, 4: 13367, 5: 1492, 6: 87, 7: 2, 8: 0, 9: 0}\n",
+      "ELG 0.6524692860393012 2551527 1664793 {0: 886734, 1: 1603305, 2: 66, 3: 38, 4: 7, 5: 2, 6: 0, 7: 0, 8: 0, 9: 0}\n",
+      "LRG_1PASS 0.9217357205148164 341714 314970 {0: 26744, 1: 249775, 2: 24588, 3: 25970, 4: 13014, 5: 1491, 6: 87, 7: 2, 8: 0, 9: 0}\n",
       "LRG_2PASS 0.9724709432360099 131897 128266 {0: 3631, 1: 18230, 2: 103612, 3: 6070, 4: 353, 5: 1, 6: 0, 7: 0, 8: 0, 9: 0}\n"
      ]
     }
@@ -15159,11 +15160,11 @@
     "favail_B = consolidate_favail(fba_files_B)\n",
     "zcat_B = Table.read('strategy_B/zcat/dark2_dark3_zcat.fits')\n",
     "tile_efficiency('strategy_B/fiberassign_full/qa.json')\n",
-    "global_efficiency(targets, favail_B, zcat_B, target_class='QSO')\n",
-    "global_efficiency(targets, favail_B, zcat_B, target_class='LRG')\n",
-    "global_efficiency(targets, favail_B, zcat_B, target_class='ELG')\n",
-    "global_efficiency(targets, favail_B, zcat_B, target_class='LRG_1PASS')\n",
-    "global_efficiency(targets, favail_B, zcat_B, target_class='LRG_2PASS')"
+    "global_efficiency(targets, favail_B, zcat_B, target_class='QSO', truth_spectype='QSO')\n",
+    "global_efficiency(targets, favail_B, zcat_B, target_class='LRG', truth_spectype='GALAXY')\n",
+    "global_efficiency(targets, favail_B, zcat_B, target_class='ELG', truth_spectype='GALAXY')\n",
+    "global_efficiency(targets, favail_B, zcat_B, target_class='LRG_1PASS', truth_spectype='GALAXY')\n",
+    "global_efficiency(targets, favail_B, zcat_B, target_class='LRG_2PASS', truth_spectype='GALAXY')"
    ]
   },
   {
