--- a/truth.ipynb
+++ b/truth.ipynb
@@ -1063,6 +1063,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['RA', 'DEC', 'TARGETID', 'DESI_TARGET', 'BGS_TARGET', 'MWS_TARGET', 'PRIORITY_INIT', 'SUBPRIORITY', 'NUMOBS_INIT', 'HPXPIXEL', 'NUMOBS_MORE', 'PRIORITY', 'OBSCONDITIONS']\n",
+      "['TARGETID', 'MOCKID', 'TRUEZ', 'TRUESPECTYPE', 'TEMPLATETYPE', 'TEMPLATESUBTYPE', 'TEMPLATEID', 'SEED', 'MAG', 'MAGFILTER', 'FLUX_G', 'FLUX_R', 'FLUX_Z', 'FLUX_W1', 'FLUX_W2']\n",
+      "TARGETID\n",
+      "MWS_ANY 774348\n",
+      "BGS_ANY 568126\n",
+      "STD_FAINT 68323\n",
+      "STD_BRIGHT 32125\n",
+      "ELG 2292022\n",
+      "LRG 425048\n",
+      "QSO 246913\n",
+      "writing truth\n",
+      "done truth\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial_truth_file = \"targets/subset_truth_dr8_mtl_dark_gray_NGC.fits\"\n",
+    "if not os.path.exists(initial_truth_file):\n",
+    "    import desitarget.mock.mockmaker as mb\n",
+    "    from desitarget.targetmask import desi_mask, bgs_mask, mws_mask\n",
+    "\n",
+    "    targets = Table.read(initial_mtl_file)\n",
+    "    colnames = list(targets.dtype.names)\n",
+    "    print(colnames)\n",
+    "    nobj = len(targets)\n",
+    "    truth = mb.empty_truth_table(nobj=nobj)[0]\n",
+    "    print(truth.keys())\n",
+    "\n",
+    "    for k in colnames:\n",
+    "        if k in truth.keys():\n",
+    "            print(k)\n",
+    "            truth[k][:] = targets[k][:]\n",
+    "\n",
+    "    nothing = '          '\n",
+    "    truth['TEMPLATESUBTYPE'] = np.repeat(nothing, nobj)\n",
+    "\n",
+    "    masks = ['MWS_ANY', 'BGS_ANY', 'STD_FAINT', 'STD_BRIGHT','ELG', 'LRG', 'QSO', ]\n",
+    "    dict_truespectype = {'BGS_ANY':'GALAXY', 'ELG':'GALAXY', 'LRG':'GALAXY', 'QSO':'QSO', \n",
+    "                    'MWS_ANY':'STAR', 'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR'}\n",
+    "    dict_truetemplatetype = {'BGS_ANY':'BGS', 'ELG':'ELG', 'LRG':'LRG', 'QSO':'QSO', \n",
+    "                        'MWS_ANY':'STAR', 'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR'}\n",
+    "    dict_truez = {'BGS_ANY':0.1, 'ELG':1.5, 'LRG':0.7, 'QSO':2.0, \n",
+    "                        'MWS_ANY':0.0, 'STD_FAINT':0.0, 'STD_BRIGHT':0.0}\n",
+    "\n",
+    "    for m in masks:\n",
+    "        istype = (targets['DESI_TARGET'] & desi_mask.mask(m))!=0\n",
+    "        print(m, np.count_nonzero(istype))\n",
+    "        truth['TRUESPECTYPE'][istype] = np.repeat(dict_truespectype[m], np.count_nonzero(istype))\n",
+    "        truth['TEMPLATETYPE'][istype] = np.repeat(dict_truetemplatetype[m], np.count_nonzero(istype))\n",
+    "        truth['MOCKID'][istype] = targets['TARGETID'][istype]\n",
+    "        truth['TRUEZ'][istype] = dict_truez[m]\n",
+    "\n",
+    "        \n",
+    "    truth['TRUEZ'][is_lya_qso] = 3.0\n",
+    "    # Check that all targets have been assigned to a class\n",
+    "    iii = truth['MOCKID']==0\n",
+    "    assert np.count_nonzero(iii)==0\n",
+    "    \n",
+    "    print('writing truth')\n",
+    "    truth.write(initial_truth_file, overwrite=True)\n",
+    "    print('done truth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth = Table.read(initial_truth_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ii = (truth['TRUEZ']>2.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'QSO'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(truth['TEMPLATETYPE'][ii])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
