--- a/counts.ipynb
+++ b/counts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,96 +29,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zcat = Table.read(\"strategy_A/zcat/dark2_dark3_zcat.fits\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zcat_large = zcat[zcat['NUMOBS']>5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "targets = Table.read(\"targets/subset_dr8_mtl_dark_gray_NGC.fits\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "395895\n",
-      "219986\n",
-      "{1, 2, 3, 4, 5, 6}\n"
+      "864670 864670 864670\n"
      ]
     }
    ],
    "source": [
-    "only_qso_not_elg = ((targets['DESI_TARGET']&desi_mask.QSO)!=0)&(((targets['DESI_TARGET']&desi_mask.ELG)==0))\n",
-    "print(np.count_nonzero(only_qso_not_elg))\n",
-    "targets_qso = targets[only_qso_not_elg]\n",
-    "ii_targets_qso = np.in1d(zcat['TARGETID'], targets_qso['TARGETID'])\n",
-    "print(np.count_nonzero(ii_targets_qso))\n",
-    "zcat_qso = zcat[ii_targets_qso]\n",
-    "print(set(zcat_qso['NUMOBS']))"
+    "full_targets = Table.read(\"targets/subset_dr8_mtl_dark_gray_NGC.fits\")\n",
+    "zcat = Table.read(\"strategy_A/zcat/dark2_dark3_zcat.fits\")\n",
+    "full_mtl = Table.read(\"strategy_A/targets/dark2_dark3_subset_dr8_mtl_dark_gray_northern_cap.fits\")\n",
+    "\n",
+    "ii = np.in1d(full_mtl['TARGETID'], zcat['TARGETID'])\n",
+    "in_mtl = full_mtl[ii]\n",
+    "\n",
+    "ii = np.in1d(full_targets['TARGETID'], zcat['TARGETID'])\n",
+    "in_targets = full_targets[ii]\n",
+    "\n",
+    "print(len(zcat), len(in_mtl), len(in_targets))\n",
+    "in_mtl.sort(keys='TARGETID')\n",
+    "zcat.sort(keys='TARGETID')\n",
+    "in_targets.sort(keys='TARGETID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ii_targets = np.in1d(targets['TARGETID'], zcat_large['TARGETID'])\n",
-    "targets_large = targets[ii_targets]"
+    "assert np.all(in_mtl['TARGETID']==zcat['TARGETID'])\n",
+    "assert np.all(in_mtl['TARGETID']==in_targets['TARGETID'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = []\n",
-    "for i in range(len(targets_large)):\n",
-    "    n = desi_mask.names(targets_large['DESI_TARGET'][i])\n",
-    "    if n not in names:\n",
-    "        names.append(n)"
+    "zcat_large = zcat[(zcat['NUMOBS']>4) & (zcat['SPECTYPE']!='STAR')]\n",
+    "in_mtl_large = in_mtl[(zcat['NUMOBS']>4) & (zcat['SPECTYPE']!='STAR')]\n",
+    "in_targets_large = in_targets[(zcat['NUMOBS']>4) & (zcat['SPECTYPE']!='STAR')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = {}\n",
+    "for i in range(len(in_mtl_large)):\n",
+    "    a = desi_mask.names(in_mtl_large['DESI_TARGET'][i])\n",
+    "    n = ''\n",
+    "    for aa in a:\n",
+    "        n = n +' '+ aa\n",
+    "    if n not in names.keys():\n",
+    "        names[n] = 1\n",
+    "    else:\n",
+    "        names[n] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['ELG', 'QSO', 'ELG_SOUTH', 'QSO_SOUTH'],\n",
-       " ['LRG', 'LRG_1PASS', 'LRG_SOUTH', 'LRG_1PASS_SOUTH', 'BGS_ANY'],\n",
-       " ['STD_WD', 'MWS_ANY'],\n",
-       " ['QSO', 'QSO_SOUTH', 'STD_WD', 'BGS_ANY', 'MWS_ANY'],\n",
-       " ['STD_FAINT', 'MWS_ANY'],\n",
-       " ['STD_WD', 'BGS_ANY', 'MWS_ANY']]"
+       "{' QSO QSO_SOUTH BGS_ANY MWS_ANY': 520,\n",
+       " ' ELG QSO ELG_SOUTH QSO_SOUTH': 4447,\n",
+       " ' QSO QSO_SOUTH BGS_ANY': 376,\n",
+       " ' QSO QSO_SOUTH': 2677,\n",
+       " ' QSO QSO_SOUTH MWS_ANY': 49,\n",
+       " ' ELG QSO ELG_SOUTH QSO_SOUTH BGS_ANY': 55,\n",
+       " ' QSO QSO_SOUTH STD_WD BGS_ANY MWS_ANY': 8,\n",
+       " ' QSO QSO_SOUTH STD_FAINT BGS_ANY MWS_ANY': 4,\n",
+       " ' LRG QSO LRG_1PASS LRG_SOUTH QSO_SOUTH LRG_1PASS_SOUTH': 2,\n",
+       " ' QSO QSO_SOUTH STD_WD MWS_ANY': 1}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
